# LanQR

./: Cargo.toml  README.md  build.ps1  build.rs
src/: app.rs  context_menu.rs  errors.rs  i18n.rs  logging.rs  main.rs  models.rs  network.rs  qr.rs  share_service.rs
