[package]
name = "lanqr"
version = "0.1.0"
edition = "2021"
description = "LanQR / 邻享码 - Windows LAN QR share tool with built-in static sharing"

[[bin]]
name = "LanQR"
path = "src/main.rs"

[dependencies]
arboard = "3.4"
directories = "5.0"
eframe = { version = "0.33", default-features = true }
egui = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
ipconfig = "0.3"
qrcode = "0.14"
rand = "0.8"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
